<resources>
    <string name="app_name">Up and Down the River</string>
    <string name="main_menu_text">Up and Down the River</string>
    <string name="new_game_button_text">New Game</string>
    <string name="load_game_button_text">Load Game</string>
    <string name="players_button_text">Players</string>
    <string name="settings_button_text">Settings</string>
    <string name="new_player_button_text">New Player</string>
    <string name="element_text">element_text</string>
    <string name="save_player_text">Save</string>
    <string name="player_name_text_field">Player\'s name</string>
    <string name="nick_name_text_field">Player\'s nick name</string>
    <string name="player_header_text">Players</string>
    <string name="select_players_header">Select Players</string>
    <string name="submit_button_text">Submit</string>
    <string name="game_settings_text">Game Settings</string>
    <string name="trump_mode_text">Trump Mode</string>
    <string name="max_cards_text">Max Cards</string>
    <string name="up_or_down_text">Up or Down</string>
    <string name="number_of_decks_text">Number of Decks</string>
    <string name="up_and_down_the_river">Up and Down the River</string>
    <string name="start_bidding">Start Bidding</string>
    <string name="number_of_cards_header">Number of Cards</string>
    <string name="dealer_header">Dealer</string>
    <string name="round_header">Round</string>
    <string name="trump_header">Trump</string>
    <string name="score_text">Scores</string>
    <string name="bids_text">Bids</string>
    <string name="player_text">Player</string>
    <string name="bid_text">Bid</string>
    <string name="minus_button">-</string>
    <string name="button_plus">+</string>
    <string name="next_button_text">Next</string>
    <string name="finish_bidding">Finish Bidding</string>
    <string name="select_dealer_text">First Dealer</string>
    <string name="selected_players">Selected Players</string>
    <string name="available_players_header_text">Available Player</string>
    <string name="add_player_player_name_header_text">Name:</string>
    <string name="add_player_player_nick_text">Nick Name:</string>
    <string name="dealer_can_bid_anything">%s can bid anything</string>
    <string name="bid_count_header">Bid Count</string>
    <string name="after_bidding_header">Play</string>
    <string name="tricks_taken_text">Tricks Taken</string>
    <string name="enter_tricks_header_text">Enter Tricks Taken</string>
    <string name="finish_text">Finish</string>
    <string name="back_text">Back</string>
    <string name="game_end_header_text">Game Over</string>
    <string name="main_menu_button_text">Main Menu</string>
    <string name="detail_score_text">Detailed Score</string>
    <string name="previous_games_button_text">Previous Games</string>
    <string name="stats_text">Player Stats</string>
    <string name="clear_all_text">Clear All</string>
    <string name="clear_games_text">Clear Games</string>
    <string name="recap_button_text">Recap</string>
    <string name="what_is_trump_text">What\'s Trump?</string>
    <string name="test_nick_name_button_text">Test Nick Name</string>
</resources>